[presentation] set exercise 6 statement, refactor normalized_features.json to normalized_cities.json

--- a/.gitignore
+++ b/.gitignore
@@ -23,8 +23,8 @@ dist
 /node_modules
 play.data
 
-data/.normalized_features.json.crc
-data/normalized_features.json
+data/.normalized_cities.json.crc
+data/normalized_cities.json
 
 /presentation/*.log
 /presentation/*.aux
