refactor code, save JSON on exercise 5 instead of exercise 6 to allow us to pass json from exercise to exercise

--- a/.gitignore
+++ b/.gitignore
@@ -23,7 +23,7 @@ dist
 /node_modules
 play.data
 
-data/.normalized_cities.json.crc
+data/cities.json
 data/normalized_cities.json
 
 /presentation/*.log
