--- a/.gitignore
+++ b/.gitignore
@@ -25,6 +25,8 @@ play.data
 
 data/cities.json
 data/normalized_cities.json
+data/training_cities.json
+data/test_cities.json
 
 /presentation/*.log
 /presentation/*.aux
