change exercise 8 to load file instead of generating test and training data

--- a/.gitignore
+++ b/.gitignore
@@ -27,6 +27,7 @@ data/cities.json
 data/normalized_cities.json
 data/training_cities.json
 data/test_cities.json
+data/labeled_cities.json
 
 /presentation/*.log
 /presentation/*.aux
